--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://Sakshamthiside.github.io/react-main",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
